Bug in descEs and descEn in activities form fixed

--- a/client/components/navbar/Navbar.module.css
+++ b/client/components/navbar/Navbar.module.css
@@ -11,9 +11,19 @@
   color: #fff;
 }
 
+.container select{
+  background-color: var(--secondary-color);
+}
+
+.container option {
+  font-weight: bolder;
+}
+
+
 .logo {
   width: 10%;
   height: auto;
+  display: flex;
 }
 .logo img {
   height: 8vh;
