--- a/client/components/activitiesWeek/Carousel.module.css
+++ b/client/components/activitiesWeek/Carousel.module.css
@@ -7,7 +7,8 @@
   justify-content: center;
   gap: 2vh;
   padding: 2vh;
-  
+  color: var(--secondary-color);
+
 }
 
 .error {
@@ -56,9 +57,11 @@
   border-radius: var(--border-radius);
   font-weight: 700;
   text-transform: uppercase;
+  color: var(--secondary-color);
+
 }
 
-.hours{
+.hours {
   width: 100%;
   display: flex;
   justify-content: center;
@@ -77,8 +80,8 @@
   text-transform: uppercase;
 }
 
-.inputs option{
-   width: 100%;
+.inputs option {
+  width: 100%;
   height: 10%;
   text-align: center;
   margin: 1vh;
@@ -108,12 +111,41 @@
   background-color: #9f9b9b;
 }
 
-.description{
-  width: 90%;
-  height: 90%;
+.description {
+  width: 450px;
+  height: 400px;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
+  flex-direction: column;
+}
+.description textarea {
+  resize: none;
+  border: 3px solid var(--secondary-color);
+  border-radius: var(--border-radius);
+  font-size: 2vh;
+  word-wrap: break-word;
+  text-transform: uppercase;
+  color: var(--secondary-color);
+}
+
+.description textarea:focus {
+  resize: none;
+  outline: 5px solid var(--secondary-color);
+  border-radius: var(--border-radius);
+}
+.description button {
+  width: 50%;
+  height: 10%;
+  text-align: center;
+  margin: 1vh;
+  font-size: var(--font-m);
+  border: none;
+  border-radius: var(--border-radius);
+  font-weight: 700;
+  background-color: var(--secondary-color);
+  color: #fff;
+  text-align: center;
 }
 
 .delete {
@@ -130,7 +162,7 @@
   text-align: center;
 }
 
-.delete:hover{
+.delete:hover {
   background-color: rgb(114, 7, 7);
 }
 
@@ -215,13 +247,13 @@
 @media screen and (max-width: 425px) {
   .form {
     width: 370px;
-    height: 250px;
+    height: 290px;
     font-size: var(--font-sm);
-    
   }
   .save {
     height: 3vh;
     font-size: var(--font-sm);
   }
 
+ 
 }
