--- a/client/components/staffWeek/Staff.module.css
+++ b/client/components/staffWeek/Staff.module.css
@@ -92,6 +92,44 @@ background-color: #9f9b9b;
   color:#fff;
   text-align: center;
 }
+
+.bio {
+  width: 450px;
+  height: 400px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
+}
+.bio textarea {
+  resize: none;
+  border: 3px solid var(--secondary-color);
+  border-radius: var(--border-radius);
+  font-size: 2vh;
+  word-wrap: break-word;
+  text-transform: uppercase;
+  color: var(--secondary-color);
+}
+
+.bio textarea:focus {
+  resize: none;
+  outline: 5px solid var(--secondary-color);
+  border-radius: var(--border-radius);
+}
+.bio button {
+  width: 50%;
+  height: 10%;
+  text-align: center;
+  margin: 1vh;
+  font-size: var(--font-m);
+  border: none;
+  border-radius: var(--border-radius);
+  font-weight: 700;
+  background-color: var(--secondary-color);
+  color: #fff;
+  text-align: center;
+}
+
 @media screen and (max-width:1280px) {
   .form{
     width: 300px;
