Dining edit completed

--- a/client/components/diningWeek/Dinning.module.css
+++ b/client/components/diningWeek/Dinning.module.css
@@ -138,6 +138,49 @@
   background-color: #9f9b9b;
 }
 
+.description {
+  width: 450px;
+  height: 400px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
+  background-color: #fff;
+  border-radius: 5px;
+  color: var(--secondary-color);
+
+
+}
+.description textarea {
+  resize: none;
+  border: 3px solid var(--secondary-color);
+  border-radius: var(--border-radius);
+  font-size: 2vh;
+  word-wrap: break-word;
+  text-transform: uppercase;
+  color: var(--secondary-color);
+}
+
+.description textarea:focus {
+  resize: none;
+  outline: 5px solid var(--secondary-color);
+  border-radius: var(--border-radius);
+}
+.description button {
+  width: 50%;
+  height: 10%;
+  text-align: center;
+  margin: 1vh;
+  font-size: var(--font-m);
+  border: none;
+  border-radius: var(--border-radius);
+  font-weight: 700;
+  background-color: var(--secondary-color);
+  color: #fff;
+  text-align: center;
+}
+
+
 @media screen and (max-width: 1400px) {
   .container {
     min-height: 100vh;
