--- a/client/components/activitiesWeek/Carousel.module.css
+++ b/client/components/activitiesWeek/Carousel.module.css
@@ -8,7 +8,6 @@
   gap: 2vh;
   padding: 2vh;
   color: var(--secondary-color);
-
 }
 
 .error {
@@ -58,7 +57,6 @@
   font-weight: 700;
   text-transform: uppercase;
   color: var(--secondary-color);
-
 }
 
 .hours {
@@ -118,6 +116,10 @@
   justify-content: space-around;
   align-items: center;
   flex-direction: column;
+  background-color: #fff;
+  border-radius: 5px;
+  text-transform: uppercase;
+  color: var(--secondary-color);
 }
 .description textarea {
   resize: none;
@@ -126,7 +128,6 @@
   font-size: 2vh;
   word-wrap: break-word;
   text-transform: uppercase;
-  color: var(--secondary-color);
 }
 
 .description textarea:focus {
@@ -254,6 +255,4 @@
     height: 3vh;
     font-size: var(--font-sm);
   }
-
- 
 }
