--- a/client/components/bars/Bars.module.css
+++ b/client/components/bars/Bars.module.css
@@ -40,6 +40,38 @@
 
 }
 
+.hours {
+  width: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.hours select {
+  width: 50%;
+  height: 70%;
+  text-align: center;
+  margin: 1vh;
+  font-size: var(--font-m);
+  border: none;
+  border-radius: var(--border-radius);
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.hours option {
+  width: 100%;
+  height: 10%;
+  text-align: center;
+  margin: 1vh;
+  font-size: var(--font-m);
+  border: none;
+  border-radius: var(--border-radius);
+  font-weight: 700;
+  text-transform: uppercase;
+  overflow: hidden;
+}
+
 .error{
     font-size: 9px;
     color: red;
