--- a/client/components/breakfast/Breakfast.module.css
+++ b/client/components/breakfast/Breakfast.module.css
@@ -7,7 +7,7 @@
   flex-wrap: wrap;
 }
 
-.form_container{
+.form_container {
   width: 100%;
   height: 80vh;
   display: flex;
@@ -15,55 +15,128 @@
   justify-content: center;
   flex-wrap: wrap;
   gap: 2vh;
-  margin-top: 5vh;}
+  margin-top: 5vh;
+}
 .form {
   width: 450px;
-  height: 350px;
+  min-height: 300px;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   font-size: var(--font-sm);
   border-radius: var(--border-radius);
   box-shadow: var(--box-shadow);
   background-color: #fff;
-
 }
 
-.inputs{
+.inputs {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
 
-.form input{
-    width: 90%;
-    height:10%;
-    text-align: center;
-    margin: 1vh;
-    font-size:var(--font-m);
-    border:none;
-    border-radius: var(--border-radius);
-    font-weight: 700;
-    text-transform: uppercase;
+.form input {
+  width: 90%;
+  height: 10%;
+  text-align: center;
+  margin: 1vh;
+  font-size: var(--font-m);
+  border: none;
+  border-radius: var(--border-radius);
+  font-weight: 700;
+  text-transform: uppercase;
 }
 
-.form img{
-    width: 40%;
-    height: auto;
-
+.error {
+  font-size: 9px;
+  color: red;
+  margin: 0;
+  padding: 0;
 }
 
-.error{
-    font-size: 9px;
-    color: red;
-    margin: 0;
-    padding: 0;
+.hours {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.save  {
+.inputs select {
+  width: 100%;
+  height: 70%;
+  text-align: center;
+  margin: 1vh;
+  font-size: var(--font-m);
+  border: none;
+  border-radius: var(--border-radius);
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.inputs option {
+  width: 100%;
+  height: 10%;
+  text-align: center;
+  margin: 1vh;
+  font-size: var(--font-m);
+  border: none;
+  border-radius: var(--border-radius);
+  font-weight: 700;
+  text-transform: uppercase;
+  overflow: hidden;
+}
+
+.images {
   width: 50%;
-  height:12%;
+  min-height: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.diningimg {
+  width: 100%;
+  min-height: 175px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.diningimg img {
+  width: 70%;
+  height: auto;
+  cursor: pointer;
+}
+
+.menus {
+  width: 100%;
+  min-height: 190px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  gap:2px;
+}
+.menuitem {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-size: 14px;
+  
+}
+.menuitem label{
+  margin-bottom: 10px;
+}
+
+.menuitem img {
+  width: auto;
+  height: 17vh;
+  cursor: pointer;
+}
+.save {
+  width: 70%;
+  height: 30px;
   text-align: center;
   margin: 1vh;
   font-size: var(--font-m);
@@ -71,61 +144,92 @@
   border-radius: var(--border-radius);
   font-weight: 700;
   background-color: var(--secondary-color);
-  color:#fff;
+  color: #fff;
   text-align: center;
 }
 
-.save:hover{
-background-color: #9f9b9b;
+.save:hover {
+  background-color: #9f9b9b;
 }
 
-@media screen and (max-width: 1400px){
-  .container{
+.description {
+  width: 450px;
+  height: 400px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
+  background-color: #fff;
+  border-radius: 5px;
+  color: var(--secondary-color);
+}
+.description textarea {
+  resize: none;
+  border: 3px solid var(--secondary-color);
+  border-radius: var(--border-radius);
+  font-size: 2vh;
+  word-wrap: break-word;
+  text-transform: uppercase;
+  color: var(--secondary-color);
+}
+
+.description textarea:focus {
+  resize: none;
+  outline: 5px solid var(--secondary-color);
+  border-radius: var(--border-radius);
+}
+.description button {
+  width: 50%;
+  height: 10%;
+  text-align: center;
+  margin: 1vh;
+  font-size: var(--font-m);
+  border: none;
+  border-radius: var(--border-radius);
+  font-weight: 700;
+  background-color: var(--secondary-color);
+  color: #fff;
+  text-align: center;
+}
+
+.menuLg {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-size: 3vh;
+  color: #fff;
+}
+@media screen and (max-width: 1400px) {
+  .container {
     min-height: 100vh;
   }
-  .form{
+  .form {
     width: 330px;
     height: 230px;
   }
-   .form input{
+  .form input {
     font-size: var(--font-sm);
-   } 
-   .form img{
+  }
+  .form img {
     width: 30%;
     height: auto;
-
-}
-   .save{
+  }
+  .save {
     font-size: var(--font-sm);
-   }
+  }
 }
 
-@media screen and (max-width:768px) {
-  .container h1{
-      margin-top: 7vh;
-      font-size: var(--font-lg);
-  }
-  .image_container{
-      width: 79vw;
-      min-height: 100vh;
-      display: flex;
-      flex-wrap: wrap;
-      gap: 1vh;
-      margin: 2vh;
-  
-  }
-  
-  .image_container img{
-      width: 38vw;
-      height: auto;
-      border-radius: 5px;
-  }
-  .form{
+@media screen and (max-width: 425px) {
+  .form {
     width: 370px;
     height: 300px;
+    font-size: var(--font-sm);
   }
-  .save{
+  .save {
     height: 3vh;
     font-size: var(--font-sm);
-   }
+  }
 }
