--- a/client/components/breakfast/Breakfast.module.css
+++ b/client/components/breakfast/Breakfast.module.css
@@ -2,16 +2,14 @@
   width: 100%;
   height: 100vh;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
+  margin-top: 9vh;
+
 }
 
 .form_container {
   width: 100%;
   height: 80vh;
   display: flex;
-  align-items: center;
   justify-content: center;
   flex-wrap: wrap;
   gap: 2vh;
@@ -19,7 +17,7 @@
 }
 .form {
   width: 450px;
-  min-height: 300px;
+ height: 400px;
   display: flex;
   justify-content: space-between;
   align-items: center;
