--- a/client/components/bars/Bars.module.css
+++ b/client/components/bars/Bars.module.css
@@ -7,6 +7,8 @@
   justify-content: center;
   gap: 2vh;
   padding: 2vh;
+  color: var(--secondary-color);
+
 }
 
 .form {
@@ -84,7 +86,7 @@
   height:10%;
   text-align: center;
   margin: 1vh;
-  font-size: var(--font-m);
+  font-size: 14px;
   border: none;
   border-radius: var(--border-radius);
   font-weight: 700;
@@ -109,10 +111,10 @@ background-color: #9f9b9b;
   .form{
     width: 370px;
     height: 280px;
-    font-size: var(--font-sm);
+    font-size: var(--font-m);
   }
   .save button{
-    height: 3vh;
-    font-size: var(--font-sm);
+    height: 3vh !important;
+    font-size: var(--font-m);
    }
 }
