--- a/client/components/flyers/Flyers.module.css
+++ b/client/components/flyers/Flyers.module.css
@@ -3,10 +3,42 @@
   width: 100%;
   min-height: 100vh;
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2vh;
+  padding: 2vh;
+  color: var(--secondary-color);
+
+}
+.cards_container {
+  width: 100%;
+  min-height: 80vh;
+  display: flex;
   flex-wrap: wrap;
   justify-content: center;
   gap: 2vh;
   padding: 2vh;
+}
+.title {
+  width: 50%;
+  display: flex;
+  justify-content: space-around;
+}
+.title label {
+  color: #fff;
+}
+
+.title input {
+  text-align: center;
+  text-transform: uppercase;
+  border-radius: var(--border-radius);
+}
+.title button {
+  background-color: var(--secondary-color);
+  width: 100px;
+  color: #fff;
+  border-radius: var(--border-radius);
 }
 .error {
   font-size: 9px;
@@ -24,7 +56,7 @@
 
 .form {
   width: 500px;
-  height:380px;
+  height: 380px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -85,6 +117,8 @@
   font-weight: 700;
   text-transform: uppercase;
   overflow: hidden;
+  color: var(--secondary-color);
+
 }
 
 .description {
@@ -178,7 +212,25 @@
 @media screen and (max-width: 768px) {
   .form {
     width: 370px;
-    height: 280px;
+    height: 295px;
     font-size: var(--font-sm);
   }
+  .hours {
+    width: 100%;
+  }
+  .title {
+    width: 50%;
+    display: flex;
+    height: 16vh;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    font-size: var(--font-m)
+  }
+
+  .title button{
+    width: 22vw;
+    height: 2.2vh;
+  }
+
 }
