--- a/client/components/bars/Bars.module.css
+++ b/client/components/bars/Bars.module.css
@@ -8,12 +8,11 @@
   gap: 2vh;
   padding: 2vh;
   color: var(--secondary-color);
-
 }
 
 .form {
-  width: 350px;
-  height: 350px;
+  width: 300px;
+  min-height: 500px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -24,22 +23,21 @@
   background-color: #fff;
 }
 
-.form input{
-    width: 90%;
-    height:10%;
-    text-align: center;
-    margin: 1vh;
-    font-size:var(--font-m);
-    border:none;
-    border-radius: var(--border-radius);
-    font-weight: 700;
-    text-transform: uppercase;
+.form input {
+  width: 90%;
+  height: 10%;
+  text-align: center;
+  margin: 1vh;
+  font-size: var(--font-m);
+  border: none;
+  border-radius: var(--border-radius);
+  font-weight: 700;
+  text-transform: uppercase;
 }
 
-.form img{
-    width: 50%;
-    height: auto;
-
+.form img {
+  width: 50%;
+  height: auto;
 }
 
 .hours {
@@ -74,16 +72,50 @@
   overflow: hidden;
 }
 
-.error{
-    font-size: 9px;
-    color: red;
-    margin: 0;
-    padding: 0;
+.error {
+  font-size: 9px;
+  color: red;
+  margin: 0;
+  padding: 0;
 }
 
-.save  {
+.menus {
+  width: 250px;
+  min-height: 190px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  gap: 2px;
+}
+.menuitem {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-size: 14px;
+}
+.menuitem label {
+  margin-bottom: 10px;
+}
+
+.menuitem img {
+  width: auto;
+  height: 17vh;
+  cursor: pointer;
+}
+.menuLg {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-size: 3vh;
+  color: #fff;
+}
+.save {
   width: 50%;
-  height:10%;
+  height: 30px;
   text-align: center;
   margin: 1vh;
   font-size: 14px;
@@ -91,30 +123,29 @@
   border-radius: var(--border-radius);
   font-weight: 700;
   background-color: var(--secondary-color);
-  color:#fff;
+  color: #fff;
   text-align: center;
 }
 
-.save:hover{
-background-color: #9f9b9b;
+.save:hover {
+  background-color: #9f9b9b;
 }
 
-@media screen and (max-width: 1400px){
-  .form{
+@media screen and (max-width: 1400px) {
+  .form {
     width: 250px;
     height: 250px;
   }
 }
 
-
-@media screen and (max-width:768px) {
-  .form{
+@media screen and (max-width: 768px) {
+  .form {
     width: 370px;
     height: 280px;
     font-size: var(--font-m);
   }
-  .save button{
+  .save button {
     height: 3vh !important;
     font-size: var(--font-m);
-   }
+  }
 }
