--- a/client/home/activities/Activities.module.css
+++ b/client/home/activities/Activities.module.css
@@ -80,7 +80,7 @@
 }
 .modaldesc {
   width: 25vw;
-  height: 20vw;
+  height: 25vw;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -89,9 +89,11 @@
   margin-left: 2vw;
 }
 .modaldesc_item {
+  width: 25vw;
+  height: 20vw;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
 }
 
@@ -99,6 +101,14 @@
   font-size: 2.8vh;
   color: var(--secondary-color);
   margin-top: 4vh;
+}
+.modal_desc_text{
+  width: 20vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  text-wrap: balance;
 }
 
 @media screen and (max-width: 1280px) {
@@ -152,6 +162,7 @@
 
     
   .modaldesc_item {
+    width: 80vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -162,5 +173,8 @@
     font-size: 2.5vh;
     color: var(--secondary-color);
     margin-top: 4vh;
+  }
+  .modal_desc_text{
+    width: 90vw;
   }
 }
