language button transform added

--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -80,6 +80,10 @@ body{
   cursor: pointer;
 }
 
+.lang:hover{
+  transform: scale(1.1);
+}
+
 @media screen  and (max-width: 768px) {
   .lang{
     display: none;
