--- a/client/components/activities/Carousel.module.css
+++ b/client/components/activities/Carousel.module.css
@@ -59,6 +59,30 @@
   color: var(--secondary-color);
 }
 
+.input_desc{
+  width: 80%;
+  height: 10%;
+  text-align: center;
+  margin: 1vh;
+  font-size: var(--font-m);
+  border: none;
+  border-radius: var(--border-radius);
+  font-weight: 700;
+  text-transform: uppercase;
+  color: var(--secondary-color);
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 99;
+}
+
+.input_desc input{
+width: 100%;
+height: 100%;
+pointer-events: none;
+}
+
 .hours {
   width: 100%;
   display: flex;
